added styles to application

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <title>My todo list</title>
+  <style>
+    html {
+      box-sizing: border-box;
+    }
+
+    *,
+    *:before,
+    *:after {
+      box-sizing: inherit;
+    }
+  </style>
 </head>
 
 <body>
